Fix map on small window size

--- a/client/route.scss
+++ b/client/route.scss
@@ -201,12 +201,14 @@
 
   .map-view-canvas-wrapper {
     width: 100%;
+    height: 400px;
     text-align: center;
     background: $background;
     display: block !important;
 
     canvas {
       margin-top: -45px;
+      max-width: 820px;
     }
   }
 
